<resources>
    <string name="app_name">BitcoinTicker</string>
    <string name="listing_tab">Listing</string>
    <string name="chart_tab">Chart</string>
    <string name="one_day">1 Day</string>
    <string name="five_day">5 Day</string>
    <string name="one_month">1 Month</string>
    <string name="six_months">6 Months</string>
    <string name="one_year">1 Year</string>
    <string name="five_year">5 Years</string>
    <string name="period_one_sec">1 Sec</string>
    <string name="period_two_sec">2 Secs</string>
    <string name="period_three_sec">3 Secs</string>
    <string name="period_four_sec">4 Secs</string>
    <string name="period_five_sec">5 Secs</string>
    <string name="period_six_sec">6 Secs</string>
    <string name="period_ten_sec">10 Secs</string>
    <string name="period_fifteen_sec">15 Secs</string>
    <string name="period_twenty_sec">20 Secs</string>
    <string name="period_thirty_sec">30 Secs</string>
    <string name="period_one_min">1 Min</string>
    <string name="period_two_min">2 Mins</string>
    <string name="period_three_min">3 Mins</string>
    <string name="period_four_min">4 Mins</string>
    <string name="period_five_min">5 Mins</string>
    <string name="period_six_min">6 Mins</string>
    <string name="period_ten_min">10 Mins</string>
    <string name="period_fifteen_min">15 Mins</string>
    <string name="period_twenty_min">20 Mins</string>
    <string name="period_thirty_min">30 Mins</string>
    <string name="period_one_hour">1 Hour</string>
    <string name="period_two_hour">2 Hours</string>
    <string name="period_three_hour">3 Hours</string>
    <string name="period_four_hour">4 Hours</string>
    <string name="period_six_hour">6 Hours</string>
    <string name="period_eight_hour">8 Hours</string>
    <string name="period_twelve_hour">12 Hours</string>
    <string name="period_one_day">1 Day</string>
    <string name="period_two_day">2 Days</string>
    <string name="period_three_day">3 Days</string>
    <string name="period_five_day">5 Days</string>
    <string name="period_seven_day">7 Days</string>
    <string name="period_ten_day">10 Days</string>
    <string name="period_text">Choose Period</string>
    <string name="offset_text">Choose Offset</string>
    <string name="or_str">OR</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="button_continue">Continue</string>
    <string name="register_title">"Register now, it's Fast"</string>
    <string name="do_not_have_account">Don’t have an account?</string>
    <string name="sign_up_with_email">Sign up with E-mail</string>
    <string name="register_have_account">Already have an account?</string>
    <string name="intro_clickable_login">Login</string>
    <string name="empty_email">Email cannot be empty!</string>
    <string name="email_pattern">E-mail pattern is invalid!</string>
    <string name="something_went_wrong">Somethings went wrong, please try again later!</string>
    <string name="home_fragment">Home</string>
    <string name="favorite_fragment">Favorite</string>
    <string name="favorite_hint">Enter currency!</string>
    <string name="crash_title">Sorry for crash!</string>
    <string name="vs">vs</string>
</resources>