<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="30dp">
            <ImageView
                android:id="@+id/logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="44dp"
                android:src="@drawable/logo"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="39dp"
                android:text="@string/register_title"
                android:textColor="@color/selectedColor"
                android:textSize="23sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_register_field"
                android:hint="@string/email"
                android:textColorHint="@color/white"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@null"
                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailText"
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:inputType="textNoSuggestions"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_register_field"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_login"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@null"
                app:endIconMode="password_toggle"
                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_login"
                    android:textColor="@color/white"
                    android:maxLines="1"
                    android:inputType="numberPassword"
                    android:textColorHint="@color/white"
                    app:boxStrokeColor="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.ahmetkeskin.bitcointicker.components.TickerButton
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="57dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="57dp"
                android:background="@drawable/bg_button_ripple"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordLayout"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="@id/registerButton"
                app:layout_constraintStart_toStartOf="@id/registerButton"
                app:layout_constraintTop_toBottomOf="@id/registerButton">

                <TextView
                    android:id="@+id/haveAccountPrefix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/register_have_account"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="2dp"
                    android:text="@string/intro_clickable_login"
                    android:textColor="@color/clickable_text_color"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
