<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="@dimen/login_logo_height_width"
                android:layout_height="@dimen/login_logo_height_width"
                android:layout_marginTop="@dimen/margin_xxhuge"
                android:scaleType="centerCrop"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xxlarge"
                android:text="@string/login"
                android:textColor="@color/selectedColor"
                android:textSize="@dimen/huge_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_xxlarge"
                android:layout_marginTop="@dimen/margin_xhuge"
                android:layout_marginEnd="@dimen/margin_xxlarge"
                android:background="@drawable/bg_login"
                android:hint="@string/email"
                android:textColorHint="@color/white"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@null"
                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_login"
                    android:imeOptions="actionNext"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"
                    android:nextFocusForward="@id/passwordLayout"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_xxlarge"
                android:layout_marginTop="@dimen/margin_xmedium"
                android:layout_marginEnd="@dimen/margin_xxlarge"
                android:background="@drawable/bg_login"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@null"
                app:endIconMode="password_toggle"
                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_login"
                    android:inputType="numberPassword"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    app:boxStrokeColor="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.ahmetkeskin.bitcointicker.components.TickerButton
                android:id="@+id/continueButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_xxlarge"
                android:layout_marginTop="@dimen/margin_xslarge"
                android:layout_marginEnd="@dimen/margin_xxlarge"
                android:background="@drawable/bg_button_ripple"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordLayout" />

            <View
                android:id="@+id/dividerFirst"
                android:layout_width="@dimen/login_divider_width"
                android:layout_height="@dimen/login_divider_height"
                android:layout_marginStart="@dimen/margin_xxxhuge"
                android:layout_marginTop="@dimen/margin_xxxhuge"
                android:background="@color/selectedColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/continueButton" />

            <TextView
                android:id="@+id/orStr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:text="@string/or_str"
                android:textColor="@color/white"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/dividerFirst"
                app:layout_constraintStart_toEndOf="@id/dividerFirst"
                app:layout_constraintTop_toTopOf="@id/dividerFirst" />

            <View
                android:layout_width="@dimen/login_divider_width"
                android:layout_height="@dimen/login_divider_height"
                android:layout_marginStart="@dimen/margin_large"
                android:background="@color/selectedColor"
                app:layout_constraintBottom_toBottomOf="@id/orStr"
                app:layout_constraintStart_toEndOf="@id/orStr"
                app:layout_constraintTop_toTopOf="@id/orStr" />

            <TextView
                android:id="@+id/doNotHaveAccountTw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/do_not_have_account"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/orStr" />

            <com.ahmetkeskin.bitcointicker.components.TickerButton
                android:id="@+id/signUpWithEmailButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_xxlarge"
                android:layout_marginTop="@dimen/margin_xxlarge"
                android:layout_marginEnd="@dimen/margin_xxlarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/doNotHaveAccountTw" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
